--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^6.3.1|^7.0.1",
+        "jamesdordoy/laravelvuedatatable": "^1.3",
         "laravel/framework": "^7.29",
         "laravel/sanctum": "^2.15",
         "laravel/tinker": "^2.5"
