--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "jamesdordoy/laravelvuedatatable": "^1.3",
         "laravel/framework": "^7.29",
         "laravel/sanctum": "^2.15",
-        "laravel/tinker": "^2.5"
+        "laravel/tinker": "^2.5",
+        "spatie/laravel-permission": "^5.5"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
