--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "vue-template-compiler": "^2.1.8"
     },
     "dependencies": {
+        "@casl/vue": "^1.2.3",
         "laravel-vue-datatable": "^0.6.0",
         "vue": "^2.0.8",
         "vue-axios": "^3.4.1",
