--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "laravel-vue-datatable": "^0.6.0",
         "vue": "^2.0.8",
         "vue-axios": "^3.4.1",
-        "vue-router": "^3.5.3"
+        "vue-router": "^3.5.3",
+        "vue-select": "^4.0.0-beta.3"
     }
 }
